# HexRelay

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  ITERATION_1_SPRINT_BOARD.md  ITERATION_2_SPRINT_BOARD.md  ITERATION_3_SPRINT_BOARD.md  ITERATION_4_SPRINT_BOARD.md  LICENSE  MVP_PLAN.md  Makefile  PRD_v1.md  README.md  opencode.json  package.json
.github/: pull_request_template.md
docs/: README.md
evidence/: README.md
fixtures/: README.md
infra/: .env.example  README.md  docker-compose.runtime-test.yml  docker-compose.yml  turnserver.conf
scripts/: README.md  cargo-audit-policy.mjs  check.mjs  collect-ci-evidence.sh  ensure-cargo-audit.ps1  ensure-cargo-audit.sh  network.mjs  network.ps1  network.sh  reset-dev-db.mjs  reset-dev-db.ps1  reset-dev-db.sh  run.mjs  run.ps1  run.sh  runtime-docker.mjs  security.mjs  seed.mjs  seed.ps1  seed.sh  setup.mjs  setup.ps1  setup.sh  status.mjs  status.ps1  status.sh  stop.mjs  stop.ps1  stop.sh  test-contract-parity.sh  test-network.mjs  test-runtime.mjs  test.mjs  test.ps1  test.sh  validate-cargo-audit-ignore.sh  validate-contract-parity.sh  (+6 more)
services/api-rs/: .env.example  Cargo.toml  README.md
services/api-rs/migrations/: 0001_friend_requests.sql  0002_friend_requests_transition_index.sql  0003_sessions.sql  0004_identity_keys.sql  0005_auth_challenges.sql  0006_invites.sql  0007_invite_token_hash_constraint.sql  0007_invites_hash_backfill.sql  0008_rate_limit_counters.sql  0009_relational_constraints.sql  0010_contact_invite_fields.sql  0010_invite_ids.sql  0011_dm_pairing_nonces.sql  0012_servers_and_memberships.sql  0013_dm_policy_persistence.sql  0014_dm_endpoint_cards_and_profile_devices.sql  0015_dm_fanout_cursor_metadata.sql  0016_dm_history_local_store.sql  0017_server_channels_and_messages.sql  0018_dm_durable_delivery_log.sql  0019_remove_dm_direct_connect_tables.sql  0020_dm_profile_device_secret_hash.sql  0021_dm_encrypted_envelope_catchup_policy.sql  0022_dm_outbound_forwarding_log.sql  0023_dm_outbound_forwarding_retry_schedule.sql  0024_dm_delivery_metadata_retention_indexes.sql  0025_server_roles_and_channel_permissions.sql  0026_dm_thread_last_message_summary.sql  0026_server_message_retention_policy.sql  0026_single_server_authority.sql  0026_single_server_node_authority.sql  0027_navigation_hub_actions.sql
services/api-rs/src/: app.rs  auth.rs  auth_handlers.rs  config.rs  db.rs  dev_seed.rs  directory_handlers.rs  errors.rs  friend_request_handlers.rs  handlers.rs  invite_handlers.rs  lib.rs  main.rs  models.rs  rate_limit.rs  session_token.rs  state.rs  tests.rs  validation.rs
services/api-rs/src/app/: dm_outbound_forwarding.rs  mod.rs  router.rs
services/api-rs/src/domain/: mod.rs  node_identity.rs  peer_invites.rs  server_identity.rs
services/api-rs/src/domain/auth/: validation.rs
services/api-rs/src/domain/block_mute/: service.rs  validation.rs
services/api-rs/src/domain/dm/: forwarding.rs  mod.rs  outbound_forwarding.rs  realtime.rs  routing.rs  service.rs  validation.rs
services/api-rs/src/domain/friends/: mod.rs  service.rs  validation.rs
services/api-rs/src/domain/invites/: validation.rs
services/api-rs/src/domain/server_channels/: realtime.rs
services/api-rs/src/infra/: mod.rs
services/api-rs/src/infra/crypto/: session_token.rs
services/api-rs/src/infra/db/: mod.rs  pool.rs
services/api-rs/src/infra/db/repos/: account_data_repo.rs  auth_repo.rs  contacts_repo.rs  directory_repo.rs  discovery_repo.rs  dm_history_repo.rs  dm_repo.rs  friends_repo.rs  invites_repo.rs  mod.rs  server_channels_repo.rs  servers_repo.rs
services/api-rs/src/infra/presence/: mod.rs  redis_presence.rs
services/api-rs/src/shared/: errors.rs  extractors.rs  metrics.rs
services/api-rs/src/tests/: db_persistence_tests.rs  friends_tests.rs  mod.rs
services/api-rs/src/tests/integration/: account_data_tests.rs  auth_tests.rs  authorization_tests.rs  block_mute_tests.rs  db_persistence_tests.rs  dev_testing_tests.rs  directory_tests.rs  discovery_tests.rs  dm_connectivity_tests.rs  dm_fanout_catch_up_tests.rs  dm_fanout_tests.rs  dm_lan_discovery_tests.rs  dm_pairing_tests.rs  dm_parallel_dial_tests.rs  dm_policy_tests.rs  dm_threads_tests.rs  dm_wan_wizard_tests.rs  extractor_rejection_tests.rs  friends_tests.rs  invites_tests.rs  mod.rs  node_tests.rs  presence_tests.rs  server_channel_messages_tests.rs  server_tests.rs
services/api-rs/src/transport/http/: mod.rs  pagination.rs
services/api-rs/src/transport/http/adapters/: dm_forwarding.rs  dm_realtime.rs  mod.rs
services/api-rs/src/transport/http/handlers/: account_data.rs  auth.rs  block_mute.rs  dev_testing.rs  directory.rs  discovery.rs  dm.rs  friends.rs  health.rs  invites.rs  metrics.rs  mod.rs  node.rs  presence.rs  server.rs  server_channels.rs
services/api-rs/src/transport/http/middleware/: auth.rs  authorization.rs  rate_limit.rs
services/realtime-rs/: .env.example  Cargo.toml  README.md
services/realtime-rs/src/: app.rs  config.rs  handlers.rs  lib.rs  main.rs  metrics.rs  state.rs
services/realtime-rs/src/app/: dms.rs  mod.rs  router.rs
services/realtime-rs/src/domain/: channels.rs  dms.rs  lan_discovery.rs  mod.rs  presence.rs  replay_store.rs
services/realtime-rs/src/domain/events/: service.rs
services/realtime-rs/src/tests/: mod.rs  ws_transport_tests.rs
services/realtime-rs/src/transport/http/: internal.rs  metrics.rs  mod.rs
services/realtime-rs/src/transport/ws/handlers/: gateway.rs  mod.rs
services/realtime-rs/src/transport/ws/middleware/: rate_limit.rs
(+819 files in other folders)
