[package]
name = "api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hex = "0.4"
rand = "0.8"
redis = { version = "0.27", features = ["tokio-comp"] }
ring = "0.17"
seahash = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "=1.10.0", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
realtime-rs = { path = "../realtime-rs" }
tower = { version = "0.5", features = ["util"] }
